--- a/css/components.css
+++ b/css/components.css
@@ -12,7 +12,10 @@
   font-weight: 700;
   text-decoration: none;
   font-size: var(--font-size-base);
+  transition: all 0.3s;
+
 }
+
 
 .btn-primary {
   background-color: var(--primary-color);
@@ -21,18 +24,20 @@
 
 .btn-primary:hover {
   background-color: var(--secondary-color);
+  transform: translateY(-2px);
 }
 
 .btn-secondary {
   background-color: transparent;
   color: var(--primary-color);
   border: 0.125rem solid var(--primary-color);
-  transition: all 0.3s;
 }
 
 .btn-secondary:hover {
   background-color: var(--primary-color);
   color: white;
+  transform: translateY(-2px);
+  transition: all 0.3s;
 }
 
 .social-links {
